--- a/_posts/2018-1-28-Plotting-SP500.md
+++ b/_posts/2018-1-28-Plotting-SP500.md
@@ -116,4 +116,11 @@ The code snippet from above makes an HTTP GET request to the server, gets an arr
 
 ## Putting it all together
 The end result is available here: 
-The data is updated daily. As you can see, the biggest companies are clustered in California and Washington. Not surprisingly, if we look at top 10 companies by marker cap:
+The data is updated daily. As you can see, the biggest companies are clustered in California and Washington. Not surprisingly, if we look at top 5 companies by marker cap: 
+1. Apple (California)
+2. Alphabet (California)
+3. Amazon (Washington)
+4. Microsoft (Washington)
+5. Facebook (California)
+
+Here is the [resulting map](./Map.html)
