Adjust map.html link

--- a/_posts/2018-1-28-Plotting-SP500.md
+++ b/_posts/2018-1-28-Plotting-SP500.md
@@ -123,4 +123,4 @@ The data is updated daily. As you can see, the biggest companies are clustered i
 4. Microsoft (Washington)
 5. Facebook (California)
 
-Here is the [resulting map](./Map.html)
+Here is the [resulting map](../Map.html)
