--- a/_posts/2018-1-28-Plotting-SP500.md
+++ b/_posts/2018-1-28-Plotting-SP500.md
@@ -4,6 +4,8 @@ title: Plotting 500 largest american companies on the map
 ---
 
 ## Getting S&P 500 list of companies
+The Standard & Poor's 500, often abbreviated as the S&P 500, or just the S&P, is an American stock market index based on the market capitalizations of 500 large companies having common stock listed on the NYSE or NASDAQ ([Wikipedia](https://en.wikipedia.org/wiki/S%26P_500_Index)). Let's see where this wealth is coming from geographically.
+
 In order to plot the data about 500 largest american companies on the map I need to get the list itself.
 There were a few options: Yahoo Finance API, Google Finance, Morningstar, and the list goes on. 
 However, the easiest way I've found is described in here: <https://datahub.io/core/s-and-p-500-companies>.
@@ -52,8 +54,8 @@ def get_coordinates(query):
     print(responseObject["status"])
     return None
 ```
-
-Let's look at an example from this API call:
+This code should be straighforward - it sends a request(which requires an [api key](https://developers.google.com/maps/documentation/javascript/get-api-key)) and parses the response.
+Let's look at an example response from this API call:
 ```json
 {
 	"type": "Feature",
@@ -68,8 +70,7 @@ Let's look at an example from this API call:
 	}
 }
 ```
-
-As you can see, Activision Blizzard is headquartered in California, USA.
+This [feature](https://developers.google.com/maps/documentation/javascript/3.exp/reference#Data.Feature) object contains a geometry which is a point in this case and a set of properties such as company name, market capitalization and address. As you can see, Activision Blizzard is headquartered in California, USA.
 
 In some cases Google Maps API returns null, in this case the code returns None.
 
@@ -81,7 +82,7 @@ They have an extensive documemtation available, so let's jump to the code itself
 ```javascript
 function eqfeed_callback(results) {
         var xhttp = new XMLHttpRequest();
-        xhttp.open("GET", "https://8db.execute-api.us-west-1.amazonaws.com/dev/stock/");
+        xhttp.open("GET", "");
         xhttp.send();
         xhttp.onload = function() {
           var response = xhttp.response;
